[package]
name = "computer-enhance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
minifb = "0.25.0"

[dev-dependencies]
# For benchmarking
criterion = "0.5"

# Disable the standard benchmarking harness, so we can use Criterion
[[bench]]
name = "benchmarks"
harness = false

# For a release build with debug symbols, for debugging.
# cargo build --profile=release-with-debug
# https://stackoverflow.com/questions/38803760/how-to-get-a-release-build-with-debugging-information-when-using-cargo
[profile.release-with-debug]
inherits = "release"
debug = true
