[workspace]
members = ["emulator", "haversine"]
resolver = "2"

# For a release build with debug symbols, for debugging.
# cargo build --profile=release-with-debug
# https://stackoverflow.com/questions/38803760/how-to-get-a-release-build-with-debugging-information-when-using-cargo
[profile.release-with-debug]
inherits = "release"
debug = true
